--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yukki site </title>
+<title>Yukki-dog</title>
 <!-- Стили остались без изменений -->
 <style>/* ... (оставлены как есть, как ты прислала) ... */</style>
 </head>
