--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yukki — самая милая чихуахуа</title>
+<title>Yukki</title>
 <link rel="icon" href="favicon.png" type="Yukki.png" />
 <style>
   body {
