--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yukki</title>
-<link rel="icon" href="favicon.png" type="Yukki.png" />
+<title>Yukki-dog</title>
+<link rel="icon" type="image/png" href="Yukki.png" sizes="32x32">
 <style>
   body {
     margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
